2005-03-27  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/server.c: delete OCIServer#version, OCIServer#break, OCIServer#reset.
	* ext/oci8/stmt.c: OCIStmt#bindByName accepts a symbol as a bind name.
	* lib/oci8.rb.in: add OCI8::LOB#sync, OCI8::LOB#sync= and OCI8::LOB#flush.
	* test/test_bind_raw.rb, test/test_bind_time.rb, test/test_clob.rb,
	  test/test_oradate.rb, test/test_oranumber.rb: use OCI8 high-level API
	  instead of low-level API.

2005-03-24  KUBO Takehiro  <kubo@jiubao.org>
	* oci8.rb.in: fix bug on binding Time or Date.
	* support/*: deleted.
	* test/*.rb: use 'test/unit' instead of runit.
	  ruby 1.6.8 won't be supported by this commit.
	* ext/oci8/MANIFEST, ext/oci8/depend, ext/oci8/describe.c(deleted),
	  ext/oci8/env.c, ext/oci8/extconf.rb, ext/oci8/handle.c,
	  ext/oci8/oci8.c, ext/oci8/oci8.h, ext/oci8/svcctx.c:
	  delete OCIDescribe and OCISvcCtx#describeAny. OCIDescribe isn't used by
	  oci8 high-level API.
	* test/test_all.rb, test/test_describe.rb(deleted): delete OCIDescribe
	  test cases.

2005-03-23  KUBO Takehiro  <kubo@jiubao.org>
	* oci8.rb.in, OCI8.rb:
	delete OCI8.register_type_fixer, OCI8::TypeFixer.
	add OCI8::BindType::* instead.

2005-03-21  KUBO Takehiro  <kubo@jiubao.org>
	* oci8.rb.in, OCI8.rb: refactoring OCI8::Cursor#define_a_column
	* Makefile, ext/oci8/extconf.rb: change version to 0.1.10

2005-03-20  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/stmt.c, lib/oci8.rb.in, lib/DBD/OCI8/OCI8.rb, test/test_dbi.rb:
	  enable DATE to be bound as a DBI::Date or a DBI::Timestamp.

2005-03-20  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/stmt.c, lib/oci8.rb.in, test/test_oci8.rb:
	  bind a ref cursor as an OCI8::Cursor.
          apply a patch at <URL:http://rubyforge.org/tracker/index.php?func=detail&aid=1409&group_id=256&atid=1053>.

2005-01-16  KUBO Takehiro  <kubo@jiubao.org>

	* lib/oci8.rb.in: change default bindtype for NUMBER with
	  unspecified scale.